Ensure the search-context margin does not cause a break in the background-color

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -2,6 +2,10 @@
   display: flex;
 }
 
+.header-search-enabled .panel {
+  align-items: start;
+}
+
 .header-search-enabled .search-header a, .header-search-enabled .search-header a:visited {
   color: $tertiary;
 }
@@ -24,7 +28,6 @@
    }
 
    .search-header {
-     float: right;
      margin-left: 0;
      margin-right: 10px;
    }
@@ -48,10 +51,10 @@
   margin-top: 5px;
   position: relative;
   white-space: nowrap;
-  background-color: $secondary;
 
   &.show-header-results {
     box-shadow: 0 3px 5px -2px rgba(0, 0, 0, 0.5);
+    background-color: $secondary;
   }
 
   #search-term {
@@ -77,7 +80,7 @@
 
   .search-context {
     padding: 0;
-    margin: 5px;
+    padding: 5px;
 
     label {
         float: left;
